# xspace

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  NNModel.h  NNet.cpp  NNet.h  Verifier.h  Verix.cpp  Verix.h  cmp.smt2  main.cpp  psi_c1_HA.smt2  psi_c1_toy.smt2  run.sh  stats_misclassifications.awk.patch  stats_misclassifications__conflicts.awk
algorithms/: BasicVerix.cpp  BasicVerix.h  HypothesisTesting.cpp  HypothesisTesting.h  ITPBasedExplanations.cpp  ITPBasedExplanations.h
benchmarks/: ucore_interval.smt2
data/: heartAttack2.csv  obesity_sample_test_data_noWeight.csv  obesity_test_data_noWeight.csv
data/datasets/: toy.csv
data/datasets/heart_attack/: heart_attack_quick.csv  heart_attack_short.csv
data/datasets/inner_layers/: heartAttack_1st_layer.csv  heart_1st_layer.csv
data/datasets/mnist/: mnist_quick.csv  mnist_short.csv
data/datasets/mnist_downscaled/: mnist_sample.csv
data/datasets/mnist_downscaled/test/: data.csv  images.npy
data/datasets/obesity/: obesity_quick.csv
data/models/: onnx2nnet.py  toy.nnet
data/models/Approximated_models/obesity/: obesity-10-20-10-float100.pth
data/models/heart_attack/: heart_attack-20-10.h5  heart_attack_1hidden.h5
data/models/mnist/: downscaled_mnist.nnet  downscaled_mnist.pth  mnist-200.nnet
data/models/obesity/: obesity-10-20-10.nnet
data/models/obesity/inner_layers/: obesity-10-20-10 (1).pth  obesity-10-20-10-new.pth  obesity_level_10-20-10.nnet
data/scripts/: analyze-all.sh  analyze.sh  collect_stats.sh  compare.awk  diff_outputs.sh  run-xspace-all.sh  run-xspace.sh  stats.awk
data/scripts/lib/: _set_experiments_spec  experiments  run-xspace
data/scripts/spec/: experiments  models_datasets
data/scripts/spec/experiments/: all  base  itp
datasets/: obesity.csv  obesity_short.csv
datasets/inner_layers/: heart1000_1st_layer.csv
docker/: build.sh  lib  load.sh  run.sh  save.sh
docker/cav25/: Dockerfile  README.md  abstract.txt  runme.sh
experiments/: Config.h  Utils.h  VerixExperiments.cpp  VerixExperiments.h  VerixHiddenLayerExperiment.cpp  VerixHiddenLayerExperiment.h  VerixHiddenLayerExperiments.cpp  VerixHiddenLayerExperiments.h
models/: dummy_network.nnet  heartAttack.h5  heartAttack.nnet  heartAttack10-20-10.h5  heartAttack10-20-10.nnet  heartAttack_1hidden.nnet  keras2nnet.py  onnx2nnet.py  pyTorch2nnet.py  to_nnet.py
models/Approximated_models/obesity/: obesity-10-20-10-float100.nnet
models/Heart_attack/: heartAttack50.h5  heartAttack50.nnet  heartAttack_1hidden.nnet
models/obesity/: obesity-10-20-10-new.nnet  obesity-10-20-10.pth  obesity_level.h5  obesity_level_10-20-10.h5  obesity_level_20-20-10.nnet
models/obesity/inner_layers/: obesity-10-20-10.nnet  obesity_level_noWeight.h5
nnet_utils/: normalizeNNet.py
python_scripts/: Calculate_layer_output.py  Models.py  Result_diff.py  add_model_outputs.py  print_model_formula.py
python_scripts/nnet_utils/: normalizeNNet.py  writeNNet.py
scripts/: analyze-all.sh  analyze.sh  collect_stats.sh  compare.awk  compare_subset.sh  count_fixed.sh  diff_outputs.sh  experiments  fix_opensmt_pp_output.sh  run-xspace-all.sh  run-xspace.sh  run-xspace_lib  run.sh  stats.awk
scripts/lib/: experiments  run-xspace
scripts/spec/: experiments  models_datasets
src/: CMakeLists.txt  NNet.cpp  Verifier.h  Verix.cpp  Verix.h  main.cpp
src/algorithms/: BasicVerix.cpp  BasicVerix.h  HypothesisTesting.cpp
src/experiments/: Config.h  Utils.h  VerixExperiments.cpp  VerixExperiments.h  VerixHiddenLayerExperiments.cpp
src/nn/: NNModel.cpp  NNet.cpp  NNet.h
src/verifiers/: CMakeLists.txt  UnsatCoreVerifier.h  Verifier.h
src/verifiers/marabou/: MarabouVerifier.cpp  MarabouVerifier.h
src/verifiers/opensmt/: OpenSMTVerifier.cpp  OpenSMTVerifier.h
src/xspace/: CMakeLists.txt
src/xspace/common/: Bound.cpp  Bound.h  Core.h  Interval.cpp  Interval.h  Macro.h  Print.cpp  Print.h  String.h  Utils.h  Var.h
src/xspace/explanation/: Explanation.cpp  Explanation.h
src/xspace/framework/: Config.h  Framework.cpp  Framework.h  Parse.cpp  Parse.h  Preprocess.cpp  Preprocess.h  Print.cpp  Print.h  Utils.cpp  Utils.h  VarBound.cpp  VarBound.h
src/xspace/framework/expand/: Expand.cpp  Expand.h
src/xspace/framework/expand/strategy/: AbductiveStrategy.cpp  AbductiveStrategy.h  Factory.cpp  Factory.h  OpenSMTInterpolationStrategy.cpp  OpenSMTInterpolationStrategy.h  SliceStrategy.cpp  SliceStrategy.h  Strategies.h  Strategy.cpp  Strategy.h  TrialAndErrorStrategy.cpp  TrialAndErrorStrategy.h  UnsatCoreStrategy.cpp  UnsatCoreStrategy.h
src/xspace/framework/expand/strategy/opensmt/: InterpolationStrategy.cpp  InterpolationStrategy.h  IntervalInterpolationStrategy.cpp  IntervalInterpolationStrategy.h  Strategy.cpp  Strategy.h  UnsatCoreStrategy.cpp  UnsatCoreStrategy.h
src/xspace/framework/explanation/: ConjunctExplanation.cpp  ConjunctExplanation.h  Explanation.cpp  Explanation.h  IntervalExplanation.cpp  IntervalExplanation.h  PartialExplanation.cpp  PartialExplanation.h  VarBound.cpp  VarBound.h
src/xspace/framework/explanation/opensmt/: FormulaExplanation.cpp  FormulaExplanation.h
src/xspace/nn/: Dataset.cpp  Dataset.h
verifiers/: CMakeLists.txt
verifiers/marabou/: MarabouVerifier.cpp  MarabouVerifier.h
verifiers/opensmt/: InterpolatingOpenSMTVerifier.cpp  InterpolatingOpenSMTVerifier.h  OpenSMTVerifier.cpp  OpenSMTVerifier.h
